tests/regression/success/assert-not-sliced.lus
node N(x: int) returns (y: int; b: bool);
let
  b = x >= 0;
  assert b;
  y =  x + 1;
  check y > 0;
tel
